--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=movies
+spring.data.mongodb.database=${MONGODB_Database}
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_Username}:${MONGODB_Password}@${MONGODB_Cluster}
